# world-simulation-engine

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.dependencies.yml  docker-compose.yml  example.env  pyproject.toml  zensical.toml  zensical.zh.toml
.github/workflows/: docs.yml
docs/en/: index.md
docs/zh/: index.md
frontend/: openapi.json  package-lock.json  package.json  vite.config.js
frontend/src/: main.jsx  styles.css
frontend/src/api/: authors.js  client.js  configurations.js  connections.js  media.js  prompts.js  simulations.js  worldEntities.js  worlds.js
frontend/src/app/: i18n.js  router.jsx
frontend/src/components/: AgentPresetEditor.jsx  CollapsibleFormSection.jsx  ConnectionCreateModal.jsx  ConnectionProfileColumn.jsx  ConnectionProfileTile.jsx  ConnectionProviderIcon.jsx  DataPresetEditor.jsx  EmbeddingProfileEditor.jsx  HeaderBar.jsx  InfoTooltip.jsx  InitialWorldStateEditor.jsx  LanguageSwitcher.jsx  MediaImage.jsx  MediaPickerModal.jsx  PromptAssignmentEditor.jsx  SimulationCard.jsx  SimulationListTile.jsx  WorldActionButton.jsx  WorldCard.jsx  WorldCreateModal.jsx  WorldExtraStateEditor.jsx  WorldListTile.jsx
frontend/src/layouts/: AppLayout.jsx
frontend/src/pages/: AuthorsPage.jsx  ConfigurationsPage.jsx  ConnectionsPage.jsx  MediaPage.jsx  PromptsPage.jsx  SimulationChatPage.jsx  SimulationPage.jsx  WorldPage.jsx
frontend/src/shared/: agentPresetModel.js  dataPresetModel.js  embeddingProfileModel.js  initialWorldStateModel.js  useMediaQuery.js
probes/: experiment_embedding.py
probes/agents/: agent_configuration.py  example_simulation.py  experiment_briefing.py  experiment_director.py  experiment_memory.py  experiment_world_generator.py
scripts/: export_openapi.py  insert_sample_world.py  nginx.conf  supervisord.conf
src/world_simulation_engine/: app.py
src/world_simulation_engine/component/: __init__.py  data_preset.py  prompt_loader.py  workflow_loader.py  workflow_runner.py  world_entry_recaller.py
src/world_simulation_engine/misc/: config.py  consts.py  enums.py  logging.py
src/world_simulation_engine/model/: __init__.py  agent_preset.py  character.py  connection_profile.py  container.py  data_preset.py  embedding_profile.py  emotion.py  entity_relationship.py  equipment.py  event.py  faction.py  generation_job.py  graph_state_snapshot.py  image_generation.py  image_generation_preset.py  image_record.py  intent.py  inventory.py  item.py  location.py  media.py  memory.py  prompt_message.py  silly_tavern.py  simulation.py  simulation_audit.py  subjective_entity_claim.py  task.py  turn.py  turn_presentation.py  turn_record.py  world.py  world_entry.py
src/world_simulation_engine/router/: __init__.py  author.py  background_character.py  character.py  config.py  connection.py  container.py  data_preset.py  equipment.py  event.py  intent.py  item.py  landmark.py  location.py  media.py  memory.py  prompt.py  simulation.py  turn.py  utils.py  workflow.py  world.py
src/world_simulation_engine/service/: __init__.py  audit_service.py  embed_service.py  embedding.py  llm_service.py  storage.py  storage_service.py
tests/: conftest.py
tests/development_test/: test_embedding_service.py  test_image_generation.py  test_insert_into_database.py  test_silly_tavern_importer.py  test_workflow_runner.py  test_world_generator.py
tests/evaluation_test/: conftest.py  test_action_validator.py  test_character_simulator.py  test_emotion_updater.py  test_entity_relationship_recall.py  test_input_interpreter.py  test_narrator.py  test_state_committer.py  test_subjective_model_updater.py  test_world_simulator.py  workflow_helpers.py
tests/function_test/: conftest.py  test_auth_router.py  test_background_character_router.py  test_character_router.py  test_config_router.py  test_connection.py  test_container_router.py  test_equipment_router.py  test_event_router.py  test_intent_router.py  test_item_router.py  test_landmark_router.py  test_location_router.py  test_media_router.py  test_memory_router.py  test_simulation.py  test_simulation_router.py  test_turn_router.py  test_world.py  test_world_router.py  utils.py
tests/integration_test/: conftest.py  test_character_simulator_intents.py  test_character_simulator_memory.py  test_database_writeback.py
tests/integration_test/database_service/: helpers.py  test_character.py  test_character_store.py  test_config_store.py  test_connection.py  test_container_store.py  test_database_service.py  test_dependency_deletion.py  test_emotion_store.py  test_entity_relationship_store.py  test_equipment_store.py  test_event_store.py  test_faction.py  test_generation_job_store.py  test_image_record.py  test_inventory.py  (+16 more)
tests/unit_test/: conftest.py  test_app.py  test_input_interpreter.py  utils.py
(+171 files in other folders)
